--- a/src/pages/homeUserStyles.css
+++ b/src/pages/homeUserStyles.css
@@ -1,7 +1,7 @@
 .userHomeScreen{
     background-color: #ffffff;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
   }
@@ -36,8 +36,9 @@
   }
   
   .btnBeOrganizer{
-    width: 80%;
+    width: 1000%;
     height: auto;
+    margin-right: 50px;
     margin-top: 20px;
     display: flex;
     justify-content: end;
@@ -61,8 +62,8 @@
     margin-left: 20px;
   }
   
-  .upComming, .joinEvents{
-    width: 80%;
+  .joinEvents{
+    width: 100%;
     height: auto;
   }
   
@@ -80,7 +81,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-right: 60px;
+    margin-right: 30px;
     padding: 15px;
     
   }
