--- a/src/pages/registerStyles.css
+++ b/src/pages/registerStyles.css
@@ -61,3 +61,9 @@
     position: relative;
     
   }
+
+  .registerbutton{
+    font-family: 'Roboto', sans-serif;
+    width: 100%;
+    height: 40px;
+  }
