--- a/src/pages/OrganizerHome.css
+++ b/src/pages/OrganizerHome.css
@@ -1,7 +1,14 @@
 /* Update class names to avoid conflicts with Bootstrap */
+.organizerHomeScreen{
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 
 .organizer-content {
-    justify-content: center;
+    display: flex;
+    justify-content: flex-end;
     margin: 60px 150px;
 }
 
@@ -13,8 +20,6 @@
 .organizer-create-event {
     width: 200px;
     height: 50px;
-    
-    
 }
 
 .organizer-check {
@@ -121,5 +126,16 @@
   .notif:active {
     transform: translate(1px , 1px);
     transition-duration: .2s;
+  }
+
+  .joinevents{
+    width: 100%;
+    display: flex;
+  }
+
+  .orgContainerEvents {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
   }
   
